Alteraçòes de cor e legenda

--- a/port2.css
+++ b/port2.css
@@ -102,7 +102,7 @@ h3
     display: inline-block;
     height: 200px;
     width: 300px;
-    background-color: #666;
+    background-color: rgb(120, 138, 128);
     text-align: center;
         
 }
