--- a/port2.css
+++ b/port2.css
@@ -3,8 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial;
-    font-size: 12px;
-    line-height: 15px;  
+    font-size: 12px; 
     
 }
 
@@ -31,22 +30,13 @@ header h1
 
 header img
 {
-    
-    height: 90px;
-    
-    
+    height: 90px;  
 }
 
 main
 
 {
-
     padding: 20px 60px;
-    
-    
-    
-    
-    
 }
 
 
@@ -54,32 +44,28 @@ main p
 
 
 {
+    
     text-align: left;
-    font-size: 18px;
+    font-size: 20px;
     margin: 0;
     padding: 30px 0px 10px 0px;
+    line-height: 1,5;
     
 }
 
 main img
 {
     float: right;
-    height: 25px;
-    
-    
-    
-    
+    height: 25px;  
 }
 
 hr 
 {
-    
     width: 80%;   
     margin: 30px auto;
     height: 4px;
     border: 0px;
     background-color: #181718;
-    
 }
 
 h2 
@@ -117,26 +103,13 @@ h3
     display: inline-block;
 }
 
-
-footer
-
-{
-     color:white;
-    background-color: #181718;
-    padding: 30px;
-    text-align: center;
-    
-}
-
 .batista
-
 {
     display: inline-block;
     height: 200px;
     width: 300px;
     background-color: #666;
     text-align: center;
-    
 }
 
 .batista img
@@ -147,5 +120,14 @@ footer
     width: 300px;
     background-color: #666;
     text-align: center;
-    
 }
+
+footer
+
+{
+     color:white;
+    background-color: #181718;
+    padding: 30px;
+    text-align: center;
+}
+ 
